--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -1,5 +1,5 @@
 .brewData {
-    background-color: gray;
+    background-color: rgb(128, 128, 128);
     padding: 20px;
     margin: 10px;
     /* width: 400px; */
