--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -1,21 +1,28 @@
+.control {
+    display: block;
+}
+
 .brewData {
+    flex-direction: column;
+    /* width: 100%; */
     background-color: gray;
     padding: 20px;
     margin: 10px;
-    /* width: 400px; */
+    width: 100%;
 }
 
 .brewData h3 {
     background-color: green;
     padding: 5px 20px;
     font-size: 30px;
-    width: 300px;
+    /* width: 300px; */
+    /* width: 300px; */
 }
 
 .brewData ul {
     background-color: red;
     padding: 10px;
     font-size: 20px;
-    width: 300px;
+    /* width: 600px; */
 }
 
