--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -5,24 +5,25 @@
 .brewData {
     flex-direction: column;
     /* width: 100%; */
-    background-color: gray;
+    background-color: black;
     padding: 20px;
     margin: 10px;
-    width: 100%;
+    
 }
 
 .brewData h3 {
-    background-color: green;
-    padding: 5px 20px;
+    background-color: gray;
+    padding: 5px;
     font-size: 30px;
-    /* width: 300px; */
-    /* width: 300px; */
+    width: 100%;
+
 }
 
 .brewData ul {
     background-color: red;
     padding: 10px;
     font-size: 20px;
-    /* width: 600px; */
+    width: 100%;
+
 }
 
