--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -20,10 +20,12 @@
 }
 
 .brewData ul {
-    background-color: red;
+    background-color: white;
     padding: 10px;
     font-size: 20px;
     width: 100%;
 
 }
+
+
 
