--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -20,13 +20,12 @@ h4 {
     font-weight: bold;
     margin-bottom: 2rem;
 }
-.brewData {
-    background-color: rgb(128, 128, 128);
-.control {
-    display: block;
-}
+
 
 .brewData {
+    display: flex;
+    background-color: rgb(128, 128, 128);
+    margin-right: 50px;
     flex-direction: column;
     /* width: 100%; */
     background-color: black;
@@ -34,6 +33,11 @@ h4 {
     margin: 10px;
     
 }
+
+.brewData > * {
+    justify-content: center;
+}
+
 .brewData h3 {
     background-color: gray;
     padding: 5px;
@@ -49,11 +53,14 @@ h4 {
 
 }
 li {
- font-size: 1.5rem;
- text-align: center;
- line-height: 3rem;
- font-family: 'Oufit';
+    /* display: inline; */
+    font-size: 1.5rem;
+    text-align: center;
+    line-height: 3rem;
+    font-family: 'Oufit';
+ 
 }
 img {
     min-width: 6rem;
 }
+
