adjusted background image

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -1,5 +1,8 @@
 body {
     background-image: url("https://mcdn.wallpapersafari.com/medium/91/65/gI2wco.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     min-height: 100vh;
     text-transform: capitalize;
 }
@@ -30,11 +33,9 @@ h4 {
     padding: 20px;
     margin: 10px;
 }
-
 .brewData > * {
     justify-content: center;
 }
-
 .brewData h3 {
     background-color: gray;
     padding: 5px;
