--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -5,6 +5,7 @@ body {
 }
 #entireBox {
     border: 5px solid gold;
+    
 }
 h1 {
     font-size: 3rem;
@@ -38,7 +39,7 @@ h4 {
 }
 
 .brewData h3 {
-    background-color: gray;
+    /* background-color: gray; */
     padding: 5px;
     font-size: 30px;
     width: 100%;
