--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,27 +7,34 @@
 }
 
 .hero-body {
-    background-color: black;
+    background-image: url("https://i.pinimg.com/564x/9c/a8/8b/9ca88b610259718bc6107c32a9011385.jpg")
 }
 
 .figure {
     width: 100vw;
+}
+.box {
+    border: brown 15px solid;
 }
 .brewTitle {
     display: flex;
     position: relative;
     top: -250px;
     justify-content: center;
-    font-family: Outfit;
+    font-family: 'Train One';
     font-weight: bolder;
-    font-size: 3rem;
+    font-size: 3.5rem;
     color: white;
     background-color: black;
 }
-
 .input {
     padding-top: 10px;
     height: 47px;
     margin-top: 1px;
 }
-
+#brewTypeOption {
+    width: 100%;
+}
+img {
+    border: brown 15px solid;
+}
