--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -3,11 +3,14 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     text-transform: capitalize;
 }
 #entireBox {
     border: 5px solid gold;
+    position: sticky;
+    top: 20px;
+    align-self: flex-start;
 }
 h1 {
     font-size: 3rem;
