--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -1,9 +1,5 @@
 body {
     background-image: url("https://i.pinimg.com/564x/9c/a8/8b/9ca88b610259718bc6107c32a9011385.jpg");
-    /* background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; */
-    /* min-height: 100vh; */
     text-transform: capitalize;
 }
 #entireBox {
@@ -36,18 +32,18 @@ h4 {
 .brewData {
     display: flex;
     background-color: rgb(128, 128, 128);
-    margin-right: 50px;
+    /* margin-right: 50px; */
     flex-direction: column;
     width: 100%;
     background-color: black;
-    padding: 20px;
-    margin: 10px;
+    padding-left: 10px;
+    padding-right: 30px;
+    margin-right: 10px;
 }
 .brewData > * {
     justify-content: center;
 }
 .brewData h3 {
-    /* background-color: gray; */
     padding: 5px;
     font-size: 30px;
     width: 100%;
@@ -59,12 +55,10 @@ h4 {
     width: 100%;
 }
 li {
-    /* display: inline; */
     font-size: 1.5rem;
     text-align: center;
     line-height: 3rem;
     font-family: 'Oufit';
- 
 }
 
 .custom-modal {
